--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,28 @@ border-right: solid 0px #777;
 padding: 5px 5px;
 width: 150px;
 }
+
+#container {
+  width: 700px;
+  height: 200px;
+  position: relative;
+}
+
+#overlay {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  color: red;
+  font-size: 40px;
+  z-index: 10;
+}
+
+#base {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+}
