--- a/css/style.css
+++ b/css/style.css
@@ -156,3 +156,38 @@ width: 150px;
   top: 0px;
   left: 0px;
 }
+
+
+.leftside, .rightside {
+
+	height:50vh;
+	width:100%;
+	color:#fff;
+	font-size:40px;
+
+}
+
+
+
+@media screen and (min-width:768px)
+{
+
+	.leftside, .rightside {
+
+		height:100vh;
+	}
+
+
+}
+
+
+
+
+.leftside {
+	background:red;
+}
+
+
+.rightside {
+	background:blue;
+}
