--- a/css/style_test.css
+++ b/css/style_test.css
@@ -107,28 +107,31 @@ body {
 
 
 button.play {
+    font-family: 'Russo One', sans-serif;
     background: rgb(255, 164, 0);
     cursor: pointer;
     border-top: solid 0px #eaeaea;
     border-left: solid 0px #eaeaea;
     border-bottom: solid 0px #777;
     border-right: solid 0px #777;
-    padding: 5px 5px;
-    width: 150px;
+    padding: 10px 10px;
+    width: 120px;
     }
-    button.reset {
+
+button.reset {
+    font-family: 'Russo One', sans-serif;
     background: #0094ca;
     cursor: pointer;
     border-top: solid 0px #eaeaea;
     border-left: solid 0px #eaeaea;
     border-bottom: solid 0px #777;
     border-right: solid 0px #777;
-    padding: 5px 5px;
-    width: 150px;
+    padding: 10px 10px;
+    width: 120px;
     }
     
 
 
-    .custom-class-1 {
+.custom-class-1 {
   font-family: 'Russo One', sans-serif;
 }
