--- a/schulte/css/style.css
+++ b/schulte/css/style.css
@@ -2,7 +2,6 @@
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
-	font-family: 'Oxygen', sans-serif;
 }
 
 html {
@@ -15,256 +14,6 @@ body {
 	background-repeat: no-repeat;
 	background-position: center bottom;
 	background-size: cover
-}
-
-p {
-	line-height: 30px;
-}
-
-#time {
-	margin: 0px;
-	width: 100px;
-	line-height: 40px;
-}
-
-.menu-time {
-	color: white;
-	flex-direction: row;
-	/* justify-content: center; */
-
-	margin-left: 420px;
-	height: 30px;
-	margin-bottom: 30px;
-	display: none;
-}
-
-.statistics {
-	flex-direction: column;
-	justify-content: center;
-	height: 40px;
-	margin-bottom: 40px;
-	display: none;
-	text-align: center;
-}
-
-#btn {
-	min-width: 110px;
-	background-color: #FEFDFD;
-	color: #2E2E4A;
-	border: none;
-	line-height: 20px;
-	height: 30px;
-	font-size: 16px;
-	letter-spacing: 0.6px;
-	font-weight: 700;
-	transition: 0.3s;
-	cursor: pointer;
-	border: 2px solid #2E2E4A;
-	transition: 0.3s;
-}
-
-#btn:focus {
-	outline: 0;
-}
-
-#btn:hover {
-	background-color: #2E2E4A;
-	color: white;
-}
-
-nav {
-	width: 100%;
-	height: 55px;
-	background-color: #2E2E4A;
-	box-shadow: 1px 1px 10px #2E2E4A;
-	display: flex;
-	justify-content: space-between;
-}
-
-ul {
-	display: flex;
-	flex-direction: row;
-	height: 100%;
-	width: 900px;
-	padding: 0px 150px;
-}
-
-li {
-	line-height: 50px;
-	width: 120px;
-	list-style-type: none;
-	text-align: center;
-	transition: 0.3s;
-}
-
-li a {
-	text-decoration: none;
-	color: white;
-	letter-spacing: 0.5px;
-
-}
-
-a {
-	display: block;
-	width: 100%;
-	height: 100%;
-}
-
-li:hover {
-	background-color: #5C5C72;
-}
-
-.menu {
-	display: flex;
-	justify-content: center;
-	padding: 30px 0px 35px 0px;
-	height: 90px;
-}
-
-.main {
-	display: flex;
-	align-content: center;
-	justify-content: center;
-	
-	align-items: center;
-	min-height: 480px;
-	
-	
-		
-}
-
-.undertable {
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+0,a5b9c9+4,2989d8+8,207cca+95,7db9e8+100 */
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#d0e4f7+0,73b1e7+5,92b6d3+11,539fe1+79,87bcea+100;Blue+Pipe+%231 */
-background: #d0e4f7; /* Old browsers */
-background: -moz-linear-gradient(top, #d0e4f7 0%, #73b1e7 5%, #92b6d3 11%, #539fe1 79%, #87bcea 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top, #d0e4f7 0%,#73b1e7 5%,#92b6d3 11%,#539fe1 79%,#87bcea 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom, #d0e4f7 0%,#73b1e7 5%,#92b6d3 11%,#539fe1 79%,#87bcea 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#d0e4f7', endColorstr='#87bcea',GradientType=0 ); /* IE6-9 */
-	padding: 40px 10px 20px 10px;
-}
-
-table,
-tr,
-td {
-	border: 1px solid #2E2E4A;
-	font-size: 30px;
-
-}
-
-table {
-	width: 300px;
-	height: 300px;
-	/*size of table cell is allways the same proportion*/
-	table-layout: fixed;
-	/*table border without parralel lines*/
-	border-collapse: collapse;
-	background: cornsilk
-}
-
-tr,
-td {
-	text-align: center;
-}
-
-/* select {
-	border: none;
-	border-bottom: 1px solid #2E2E4A;
-	min-width: 150px;
-	margin-right: 20px;
-	background-color: #FEFDFD;
-	cursor: pointer;
-	color: #2E2E4A;
-	font-size: 18px;
-	height: 30px;
-} */
-
-select {
-
-	min-width: 300px;
-}
-
-select:focus {
-	outline: 0;
-}
-
-option {
-	text-align: center;
-}
-
-.main-info {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	margin-top: 40px;
-}
-
-.main-info--paragraph {
-	max-width: 800px;
-	margin: 0px 40px;
-}
-
-footer {
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	right: 0;
-	width: 100%;
-	height: 35px;
-	background-color: #2E2E4A;
-}
-
-footer p {
-	color: #FEFDFD;
-	text-align: center;
-	line-height: 35px;
-	font-size: 14px;
-}
-
-
-@media only screen and (max-width: 840px) {
-	.menu {
-		display: flex;
-		align-content: center;
-		justify-content: center;
-		margin-bottom: 90px;
-		height: 320px;
-		flex-direction: column;
-		justify-content: space-evenly;
-		padding: 0px 40px;
-		padding-top: 20px;
-		margin-bottom: 20px;
-	}
-
-	select {
-		margin-right: 0px;
-	}
-
-	ul {
-		flex-direction: column;
-		padding: 0px;
-	}
-
-	li {
-		width: 100%;
-	}
-
-	nav {
-		height: 100px;
-	}
-
-	#btn {
-		min-width: 140px;
-		margin-top: 20px;
-	}
-
-	table {
-		margin: 0px 40px;
-	}
-}
-
-.cell_list:hover {
-	background-color: rgb(230, 230, 230);
 }
 
 
@@ -283,6 +32,7 @@ footer p {
 	-ms-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 }
+
 .rotate_180 {
 	transform: rotate(180deg);
 	-webkit-transform: rotate(180deg);
@@ -290,84 +40,50 @@ footer p {
 	-ms-transform: rotate(180deg);
 	-o-transform: rotate(180deg);
 }
+
 .rotate_270 {
 	transform: rotate(-90deg);
-	/* Safari */
 	-webkit-transform: rotate(-90deg);
-
-	/* Firefox */
 	-moz-transform: rotate(-90deg);
-
-	/* IE */
 	-ms-transform: rotate(-90deg);
-
-	/* Opera */
 	-o-transform: rotate(-90deg);
-
-}
-
-nav {
-
-	align-content: center;
-	justify-content: center;
-	color: white;
-	
-
 }
 
 
 
-.pure-button {
-	min-width: 300px;
+.btn-group-justified {
+	display: table;
+	width: 100%;
+	table-layout: fixed;
+	border-collapse: separate;
+}
+
+.btn-group-justified .btn,
+.btn-group-justified .btn-group {
+	float: none;
+	display: table-cell;
+	width: 1%;
+}
+
+.btn-group-justified .btn .btn,
+.btn-group-justified .btn-group .btn {
+	width: 100%;
+}
+
+.btn-group-justified .btn .dropdown-menu,
+.btn-group-justified .btn-group .dropdown-menu {
+	left: auto;
+}
+
+.disableddiv {
+    pointer-events: none;
+    filter: blur(12px);
 }
 
 
-.button-secondary {
-	background: rgb(233, 210, 8);
-}
-
-
-.button-xlarge {
-	font-size: 125%;
-}
-
-
-#titlemenu {
-
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	justify-content: center;
-  }
-  
-
-/* #game {
-	background-image: url(../img/table_with_animals.png);
-	background-repeat: no-repeat;
-	background-position: center center;
-	background-size: contain
-} */
-
-
-.wrapper {
-    display: grid;
-    grid-template-columns: 5fr 2fr 5fr;
-    grid-template-rows: 50px 50px;
-}
-
-.box{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-
-
-
-
-img.left {
+/* img.left {
 	height: 80%;
-	position:relative;
+	position: relative;
 	left: 67px;
 	bottom: 30px;
 
@@ -375,27 +91,69 @@ img.left {
 
 img.right {
 	height: 80%;
-	position:relative;
+	position: relative;
 	left: -67px;
 	bottom: -70px;
 
-}
-
-.gamebuttons {
-	display: flex;
-	flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    
-}
+} 
 
 img {
-	-webkit-transform: scale(0.75); /* Saf3.1+, Chrome */
-	   -moz-transform: scale(0.75); /* FF3.5+ */
-		-ms-transform: scale(0.75); /* IE9 */
-		 -o-transform: scale(0.75); /* Opera 10.5+ */
-			transform: scale(0.75);
-			   /* IE6–IE9 */
-			   filter: progid:DXImageTransform.Microsoft.Matrix(M11=0.9999619230641713, M12=-0.008726535498373935, M21=0.008726535498373935, M22=0.9999619230641713,SizingMethod='auto expand');
-  }​
+	-webkit-transform: scale(0.75);
+	-moz-transform: scale(0.75);
+	-ms-transform: scale(0.75);
+	-o-transform: scale(0.75);
+	transform: scale(0.75);
+}*/
 
+#grid {
+	display: grid;
+/* 	grid-template-areas:
+		'n3 n1 n7 n4 n5'
+		'n3 n1 n7 n8 n5 '
+		'n9 n10 n11 n12 n5'
+		'n13 n15 n15 n16 n2'
+		'n13 n14 n14 n16 n6'; */
+	width: 100%;
+	height: 100%;
+}
+
+#grid>div {
+	overflow: hidden;
+	font-family: 'Raleway', sans-serif;
+	font-size: 7vmin;
+	margin: 1px;
+	background: gold;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+
+	/* анимация по клику */
+	-webkit-transition: font-size 0.05s;
+	-moz-transition: font-size 0.05s;
+	-o-transition: font-size 0.05s;
+	transition: font-size 0.05s;
+
+	/* отключяем выбор текста по клику */
+		-webkit-user-select: none;  /* Chrome all / Safari all */
+		-moz-user-select: none;     /* Firefox all */
+		-ms-user-select: none;      /* IE 10+ */
+		user-select: none;          /* Likely future */      
+	  
+}
+#grid>div:active {
+	font-size: 10vmin;
+}
+
+#grid>div:hover {
+	background: goldenrod;
+}
+
+div.stretchy-wrapper {
+	position: relative;
+}
+
+/* ыключил перенос по буквам */
+.btn{
+    white-space:normal !important;
+    word-wrap: break-word; 
+}
